<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/splash"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/name_user"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="@id/ivAvatar" />

            <TextView
                android:id="@+id/tvNumberFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/number_followers"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/tvUserLogin"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/tvUserLogin"
                app:layout_constraintTop_toBottomOf="@id/tvUserLogin" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/tvNumberFollowers"
                app:layout_constraintStart_toStartOf="@id/tvNumberFollowers"
                app:layout_constraintTop_toBottomOf="@id/tvNumberFollowers" />

            <TextView
                android:id="@+id/tvNumberFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_followers"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tvNumberFollowers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNumberFollowers"
                app:layout_constraintTop_toTopOf="@id/tvNumberFollowers" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/tvNumberFollowing"
                app:layout_constraintStart_toStartOf="@id/tvNumberFollowing"
                app:layout_constraintTop_toBottomOf="@id/tvNumberFollowing" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/name_user"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

            <TextView
                android:id="@+id/tvPublicRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_repository"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvNumberPublicRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_followers"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tvPublicRepository"
                app:layout_constraintStart_toEndOf="@id/tvPublicRepository"
                app:layout_constraintTop_toTopOf="@id/tvPublicRepository" />

            <TextView
                android:id="@+id/tvPublicGist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_gists"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="@id/tvPublicRepository"
                app:layout_constraintTop_toBottomOf="@id/tvPublicRepository" />

            <TextView
                android:id="@+id/tvNumberPublicGists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_followers"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tvPublicGist"
                app:layout_constraintStart_toEndOf="@id/tvPublicGist"
                app:layout_constraintTop_toTopOf="@id/tvPublicGist" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:tabSelectedTextColor="?attr/colorOnPrimary"
        app:tabTextColor="?attr/colorOnBackground" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>